Added new comments

--- a/1stPart/TechWeek_part1_build_model.ipynb
+++ b/1stPart/TechWeek_part1_build_model.ipynb
@@ -15,8 +15,33 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Criação do modelo de ML\n",
+        "\n",
+        "Este código faz parte de um workshop prático de Machine Learning, no qual será desenvolvido um modelo de classificação para prever a sobrevivência de passageiros no desastre do Titanic, utilizando dados reais. O código realiza as seguintes etapas:\n",
+        "\n",
+        "1.   Carregamento e pré-processamento dos dados: Os dados do Titanic são carregados, e as etapas de limpeza e tratamento das informações são aplicadas (remoção de valores ausentes, conversão de variáveis categóricas, etc.).\n",
+        "2.   Criação do Modelo de Machine Learning: Um modelo de classificação é treinado utilizando um algoritmo de machine learning, o Random Forest classifier, para prever a probabilidade de sobrevivência dos passageiros com base em características como idade, gênero, classe de viagem, entre outras.\n",
+        "3. Avaliação do Modelo: O desempenho do modelo é avaliado, proporcionando uma visão da eficácia das previsões.\n",
+        "4. Exportação do Modelo Treinado: Após o treinamento, o modelo é exportado para um arquivo, que poderá ser utilizado em aplicações futuras para fazer previsões sobre novos dados.\n"
+      ],
+      "metadata": {
+        "id": "Vfau8VduoO6D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Importação das libs necessárias nesse código"
+      ],
+      "metadata": {
+        "id": "MM3UZSrYotHx"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "06zZxJAXAdS5"
       },
@@ -27,6 +52,17 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "import pickle"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "leitura da base de dados que será utilizada no treinamento\n",
+        "\n",
+        "[link da base aqui](https://www.kaggle.com/competitions/titanic/data?select=train.csv)"
+      ],
+      "metadata": {
+        "id": "aqBrDGevqR7D"
+      }
     },
     {
       "cell_type": "code",
@@ -43,7 +79,7 @@
         "id": "KiRkDbmvA6K1",
         "outputId": "b58f9749-7751-43db-9335-12fe2ba973d9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,6 +442,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "pré-processamento básico da base de dados para treinar o modelo"
+      ],
+      "metadata": {
+        "id": "a6Ebh-RrqVnh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Pré-processamento dos dados\n",
@@ -430,7 +475,7 @@
         "id": "QBp-BE3iCvnc",
         "outputId": "ed757400-5765-470c-a237-63e9f2cdc143"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -805,8 +850,17 @@
       "metadata": {
         "id": "XXYNl67-ExBb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Treinamento do modelo"
+      ],
+      "metadata": {
+        "id": "bFJlPlv_qa94"
+      }
     },
     {
       "cell_type": "code",
@@ -823,7 +877,7 @@
         "id": "SsDbER7oE1ri",
         "outputId": "ff419d51-6698-4079-b4ef-00c000807a06"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1310,7 @@
         "id": "1cSOqrMxE3mb",
         "outputId": "a22cc1ee-b21c-4f17-c563-13636065bd01"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1269,6 +1323,15 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Exportação do modelo"
+      ],
+      "metadata": {
+        "id": "4YSTHQWRqdQg"
+      }
     },
     {
       "cell_type": "code",
@@ -1286,7 +1349,7 @@
         "id": "xXVcerECAjBD",
         "outputId": "dc3ca6fe-dae6-4e3a-a03e-b4b3240ce411"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
